# Vibestick

./: .editorconfig  .gitignore  README.md  README.zh-CN.md  Vibestick.sln
.github/workflows/: ci.yml
docs/: rp2040-hid-contract.md  vibestick-device-autostart-session.md  windows-device-autostart.md
firmware/rp2040-vibestick/: CMakeLists.txt  README.md
firmware/rp2040-vibestick/src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
macos/: Package.swift  README.md  README.zh-CN.md
macos/scripts/: build-app-bundle.sh  build-dmg.sh  build-release.sh  generate-packaging-assets.swift  install-device-watcher.sh  install-helper.sh  uninstall-device-watcher.sh  uninstall-helper.sh
scripts/: clean-golden-cat-sprites.ps1  generate-pet-sprites.ps1  install-device-watcher.ps1  uninstall-device-watcher.ps1  vibestick-gui.ps1  vibestick.ps1
src/Vibestick.Cli/: Program.cs  Vibestick.Cli.csproj
src/Vibestick.Core/: Battery.cs  CoderStatusService.cs  CodexSessionStatusBridge.cs  CommandRunner.cs  DeviceDetector.cs  DeviceModels.cs  DoctorService.cs  LongTaskDetector.cs  Models.cs  PetLibrary.cs  PetModels.cs  PetStateResolver.cs  PowerCfgParser.cs  PowerPolicyManager.cs  SleepBlocker.cs  StateStore.cs  Vibestick.Core.csproj  VibestickEngine.cs  VibestickMode.cs  WindowsDeviceSnapshotSource.cs
src/Vibestick.DeviceWatcher/: Program.cs  Vibestick.DeviceWatcher.csproj
src/Vibestick.Gui/: App.cs  GuiLocalization.cs  GuiServices.cs  PetActionFrequencySettings.cs  PetSpriteAnimator.cs  PetWindow.cs  PetWindowStateStore.cs  Vibestick.Gui.csproj  WpfPetAtlasCodec.cs  (+1 more)
(+43 files in other folders)
